CHANGES.txt - 11/15/2002
------------------------

CHANGES IN CUPS V1.1.17

	- The pdftops filter didn't support all of the MacOS
	  characters for MacRoman encoded fonts.
	- The cupsEncodeOptions() and cupsParseOptions()
	  functions now conform to the grammer defined by the
	  current draft of the PAPI specification.  The main
	  difference is that option=yes and option=no are no
	  longer treated as boolean options.
	- The IPP backend didn't honor the encryption settings
	  in /etc/cups/client.conf.
	- Fixed a potential bug in the HTTP code which was
	  caused by servers sending the status line and
	  newline(s) in separate packets.
	- User-defined classification strings are now printed
	  verbatim - previously the classification box would be
	  empty.
	- Re-added Spanish to the list of PPD languages that
	  CUPS supports.
	- CUPS API library user and temp file updates for
	  Windows.
	- The image filters did not properly handle grayscale
	  printing of Sun Raster images.
	- The scheduler never reset the NumJobs variable before
	  loading the job list (previously this only happened on
	  a full start, so the problem was never apparent...)
	- The HTTP and IPP read/write code didn't handle EINTR
	  (interrupted system call) errors.
	- When under high load, the scheduler could abort due to
	  the wrong errno value after a select() call.  This was
	  caused by the child signal handler.
	- Added new load tests to the test target to verify that
	  cupsd can handle hundreds of simultaneous jobs without
	  error.
	- The Solaris USB backend now supports the new device
	  URI syntax.
	- The ppdOpen*() functions now reset the numeric locale
	  settings while loading a PPD file.
	- Fixed the libtool build rules.
	- The manpage make rules didn't use $(MAKE) and
	  $(MFLAGS) for the language subdirectories.
	- Now set the LC_TIME locale category to get the
	  properly localized time string.
	- Fixed a problem in the scheduler that would cause the