@@ -1,8 +1,12 @@
-CHANGES.txt - 11/15/2002
+CHANGES.txt - 11/18/2002
 ------------------------
 
 CHANGES IN CUPS V1.1.17
 
+	- The scheduler used a fixed-size (16k) buffer for
+	  encoding job options for filters; it now dynamically
+	  allocates and expands the buffer as needed depending
+	  on the options that are sent in a job.
 	- The pdftops filter didn't support all of the MacOS
 	  characters for MacRoman encoded fonts.
 	- The cupsEncodeOptions() and cupsParseOptions()
